# last-airblender

./: CHANGELOG.md  README.md  install.sh
.github/workflows/: release.yml
addon/: last_airblender.py
crates/last-airblender-cli/: Cargo.toml
crates/last-airblender-cli/src/: main.rs
packaging/windows/: last-airblender.wxs
scripts/: package-deb.sh  package-macos-pkg.sh  package-rpm.sh
tests/blender/: smoke_bumper_xmode_reverse.py  smoke_bumpers_vertical_left_forward.py  smoke_camera_screenshot_folder.py  smoke_dpad_scrub_after_stop.py  smoke_icon_runtime_legacy.py  smoke_start_menu_camera_fleet.py  smoke_takes_dpad_sensitivity_livepose.py
