[package]
name = "last-airblender"
version = "0.1.1"
edition = "2021"
description = "Installer, launcher, and controller bridge for The Last AirBlender Blender add-on"
license = "MIT"
repository = "https://github.com/lmtlssss/last-airblender"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
gilrs = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
which = "6"
